--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,8 +1,8 @@
 CMAKE_MINIMUM_REQUIRED(VERSION 2.8.8)
-PROJECT(dmft_full_ed Fortran)
+PROJECT(vca Fortran)
 SET(VERSION 5.1.1)
 
-SET(BUILD_TYPE "TESTING" CACHE STRING "Build type")
+SET(BUILD_TYPE "DEBUG" CACHE STRING "Build type")
 MESSAGE(STATUS "BUILD_TYPE=${BUILD_TYPE}")
 SET(CMAKE_BUILD_TYPE ${BUILD_TYPE} CACHE INTERNAL "Build type" FORCE)
 
@@ -145,32 +145,27 @@ SET(PREFIX  "$ENV{HOME}/.bin" CACHE PATH "Prefix prepended to install directorie
 SET(CMAKE_INSTALL_PREFIX "${PREFIX}" CACHE INTERNAL "Prefix prepended to install directories" FORCE)
 
 # define the executable to compiler
-SET(EXE fed_hm_bethe CACHE STRING "Driver code to compile")
+SET(EXE vca_test CACHE STRING "Driver code to compile")
 # SET(CMAKE_INSTALL_EXE "${EXE}" CACHE INTERNAL "Driver code to compile" FORCE)
 
 
-FILE(GLOB DMFT_ED_LOCAL_SRC
-  FED_INPUT_VARS.f90
-  FED_VARS_GLOBAL.f90
-  FED_AUX_FUNX.f90
-  FED_IO.f90
-  FED_SETUP.f90
-  FED_BATH.f90
-  FED_BATH_FUNCTIONS.f90
-  FED_HAMILTONIAN.f90
-  FED_DIAG.f90
-  FED_OBSERVABLES.f90
-  FED_GREENS_FUNCTIONS.f90
-  FED_CHI2FIT.f90
-  FED_MAIN.f90
-  DMFT_FULL_ED.f90
+FILE(GLOB VCA_LOCAL_SRC
+  VCA_VARS_GLOBAL.f90
+  VCA_AUX_FUNX.f90
+  VCA_IO.f90
+  VCA_SETUP.f90
+  VCA_DIAG.f90
+  VCA_OBSERVABLES.f90
+  VCA_GREENS_FUNCTIONS.f90
+  VCA_MAIN.f90
+  VCA.f90
   )
 
-SET(DMFT_ED_OBJS ${DMFT_ED_LOCAL_SRC})
+SET(VCA_OBJS ${VCA_LOCAL_SRC})
 
-ADD_EXECUTABLE(dmft_ed ${DRIVERS}/${EXE}.f90 ${DMFT_ED_OBJS})
-TARGET_LINK_LIBRARIES(dmft_ed ${DMFT_TOOLS_LDFLAGS} ${SCIFOR_LDFLAGS})  
-SET_TARGET_PROPERTIES(dmft_ed PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_INSTALL_PREFIX}" OUTPUT_NAME "${EXE}${GIT_BRANCH_}")
+ADD_EXECUTABLE(vca ${DRIVERS}/${EXE}.f90 ${VCA_OBJS})
+TARGET_LINK_LIBRARIES(vca ${DMFT_TOOLS_LDFLAGS} ${SCIFOR_LDFLAGS})  
+SET_TARGET_PROPERTIES(vca PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_INSTALL_PREFIX}" OUTPUT_NAME "${EXE}${GIT_BRANCH_}")
 
 ADD_CUSTOM_TARGET(
   completion
