partially ported nup-ndw code into vca; needs green function. code compiles but obviously can't be run yet and need thorough debug.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -153,18 +153,21 @@ FILE(GLOB VCA_LOCAL_SRC
   VCA_SPARSE_MATRIX.f90
   VCA_INPUT_VARS.f90
   VCA_VARS_GLOBAL.f90
+  VCA_BATH_SETUP.f90
+  VCA_BATH_FUNCTIONS.f90
   VCA_AUX_FUNX.f90
   VCA_IO.f90
   VCA_SETUP.f90
   VCA_EIGENSPACE.f90
-  VCA_BATH_SETUP.f90
-  VCA_BATH_FUNCTIONS.f90
-  VCA_HAMILTONIAN_MATVEC.f90
+  VCA_HAMILTONIAN_COMMON.f90
+  VCA_HAMILTONIAN_SPARSE_HxV.f90
+  VCA_HAMILTONIAN_DIRECT_HxV.f90
+  VCA_HAMILTONIAN.f90
   VCA_DIAG.f90
-  VCA_OBSERVABLES.f90
-  VCA_GREENS_FUNCTIONS.f90
-  VCA_MAIN.f90
-  VCA.f90
+#  VCA_OBSERVABLES.f90
+#  VCA_GREENS_FUNCTIONS.f90
+#  VCA_MAIN.f90
+#  VCA.f90
   )
 
 SET(VCA_OBJS ${VCA_LOCAL_SRC})
