Finished porting N_upN_dw code into vca.
-VCA_OBSERVABLES is excluded for the moment
-compiles test code
-to be tested and debugged

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -164,10 +164,12 @@ FILE(GLOB VCA_LOCAL_SRC
   VCA_HAMILTONIAN_DIRECT_HxV.f90
   VCA_HAMILTONIAN.f90
   VCA_DIAG.f90
+  VCA_GF_SHARED.f90
+  VCA_GF_NORMAL.f90
+  VCA_GREENS_FUNCTIONS.f90
 #  VCA_OBSERVABLES.f90
-#  VCA_GREENS_FUNCTIONS.f90
-#  VCA_MAIN.f90
-#  VCA.f90
+  VCA_MAIN.f90
+  VCA.f90
   )
 
 SET(VCA_OBJS ${VCA_LOCAL_SRC})
