--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -167,7 +167,7 @@ FILE(GLOB VCA_LOCAL_SRC
   VCA_GF_SHARED.f90
   VCA_GF_NORMAL.f90
   VCA_GREENS_FUNCTIONS.f90
-#  VCA_OBSERVABLES.f90
+  VCA_OBSERVABLES.f90
   VCA_MAIN.f90
   VCA.f90
   )
