calculate omega potential: first rought prototype
- added function to generate test cluster hamiltonian, in future it will
have do be passed somehow by the user
- added function to calculate sum_{RBZ}(1-V)G'(iw)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -173,6 +173,7 @@ FILE(GLOB VCA_LOCAL_SRC
   VCA_GF_NORMAL.f90
   VCA_GREENS_FUNCTIONS.f90
   VCA_OBSERVABLES.f90
+  VCA_OMEGA.f90
   VCA_MAIN.f90
   VCA.f90
   )
