--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,6 +6,9 @@ SET(BUILD_TYPE "TESTING" CACHE STRING "Build type")
 MESSAGE(STATUS "BUILD_TYPE=${BUILD_TYPE}")
 SET(CMAKE_BUILD_TYPE ${BUILD_TYPE} CACHE INTERNAL "Build type" FORCE)
 
+# Add our local CMAKE modules to the module path
+SET(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake/Modules")
+INCLUDE(${CMAKE_MODULE_PATH}/ColorsMsg.cmake)
 
 # Check that Fortran 90 is supported
 IF(NOT CMAKE_Fortran_COMPILER_SUPPORTS_F90)
@@ -14,65 +17,36 @@ ENDIF(NOT CMAKE_Fortran_COMPILER_SUPPORTS_F90)
 
 # Set some options the user may choose
 OPTION(USE_MPI "Set MPI pre-compilation flag" ON)
-#OPTION(USE_MPI_FC "Use MPI fortran compiler" ON)
-OPTION(VERBOSE "Build a verbose Makefile" OFF)
-
-# reSet compiler to MPI is required 
-
-# reSet compiler to MPI is required
-IF(USE_MPI)
-  OPTION(USE_MPI_FC "Use MPI fortran compiler" ON)
-  FIND_PACKAGE(MPI REQUIRED)
-  SET(CMAKE_Fortran_COMPILER ${MPI_Fortran_COMPILER})
-  MESSAGE(STATUS "Set Fortran compiler FC to ${CMAKE_Fortran_COMPILER}")
-ELSE(USE_MPI)
-  OPTION(USE_MPI_FC "Use MPI fortran compiler" OFF)  
-ENDIF(USE_MPI)
-
-# Set verbosity of the Makefile according to option
+OPTION(VERBOSE "Build a verbose Makefile" On)
 IF(VERBOSE)
-  SET(CMAKE_VERBOSE_MAKEFILE ON)
+  SET(CMAKE_VERBOSE_MAKEFILE OFF)
 ELSE(VERBOSE)
   SET(CMAKE_VERBOSE_MAKEFILE OFF)
 ENDIF(VERBOSE)
 
 
-# This executes code that sets the compile flags for DEBUG, RELEASE, and TESTING.
 
-if(CMAKE_Fortran_COMPILER_ID MATCHES GNU) # this is gfortran
-  SET(CMAKE_Fortran_MODDIR_FLAG   "-J")
-  SET(CMAKE_Fortran_FLAGS         "-cpp -ffree-line-length-none")
-  SET(CMAKE_Fortran_FLAGS_TESTING "-O2 ")
-  SET(CMAKE_Fortran_FLAGS_DEBUG   "-O0 -p -g -Wall -Wsurprising  -Waliasing -fwhole-file -fcheck=all -pedantic -fbacktrace")
-  SET(CMAKE_Fortran_FLAGS_RELEASE "-O3 -ffast-math -march=native -funroll-all-loops -fno-protect-parens -flto")
-  
-elseif(CMAKE_Fortran_COMPILER_ID MATCHES Intel)
-  SET(CMAKE_Fortran_MODDIR_FLAG   "-module ") #remember the ending white space here 
-  SET(CMAKE_Fortran_FLAGS         "-fpp")
-  SET(CMAKE_Fortran_FLAGS_TESTING "-O2 -ftz")
-  SET(CMAKE_Fortran_FLAGS_DEBUG   "-p -O0 -g -fpe1 -warn -debug extended -traceback -check all,noarg_temp_created")
-  SET(CMAKE_Fortran_FLAGS_RELEASE "-O3 -ftz")
-
-elseif(CMAKE_Fortran_COMPILER_ID MATCHES G95)
-  SET(CMAKE_Fortran_MODDIR_FLAG   "-fmod=")
-  SET(CMAKE_Fortran_FLAGS         "-cpp")
-  SET(CMAKE_Fortran_FLAGS_TESTING "-O1  -fsloppy-char")
-  SET(CMAKE_Fortran_FLAGS_DEBUG   "-O0 -g -ftrace=full")
-  SET(CMAKE_Fortran_FLAGS_RELEASE "-O3")
-  
-elseif(CMAKE_Fortran_COMPILER_ID MATCHES PGI)
-  SET(CMAKE_Fortran_MODDIR_FLAG   "-module ")
-  SET(CMAKE_Fortran_FLAGS         "-")
-  SET(CMAKE_Fortran_FLAGS         "")
-  SET(CMAKE_Fortran_FLAGS_DEBUG   "-g -O0 -Mframe")
-  SET(CMAKE_Fortran_FLAGS_RELEASE "-O3 -mcmodel=medium -fast -Munroll")
-
-endif()
+############################################################
+# Look for MPI if needed
+############################################################
+# reSet compiler to MPI is required
+IF(USE_MPI)
+  FIND_PACKAGE(MPI REQUIRED)
+  IF(MPI_Fortran_FOUND)
+    SET(CMAKE_Fortran_COMPILER ${MPI_Fortran_COMPILER})
+    MESSAGE(STATUS "Set Fortran compiler to ${Yellow}${CMAKE_Fortran_COMPILER}${ColourReset}, ID=${CMAKE_Fortran_COMPILER_ID}")
+    SET(MPI_CPP "MPI")		#pre-processing option
+  ELSE()
+    MESSAGE(FATAL_ERROR "MPI Found but No MPI-Fortran compiler can be determined.")    
+  ENDIF()
+ELSE(USE_MPI)
+  SET(MPI_CPP "")
+ENDIF(USE_MPI)
 
 
-
-#Check for .git and extract the current SHA1 revision.
-#create the current scifor_version.inc file
+############################################################
+# Check for .git and extract the current SHA1 revision.
+############################################################
 IF(EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/.git)
   FIND_PACKAGE(Git)
   IF(GIT_FOUND)
@@ -104,16 +78,15 @@ FILE(WRITE  ${REVISION_FILE} "character(len=41),parameter,public :: revision = \
 
 
 
-#set MPI preprocessing defition:
-IF(USE_MPI)
-  ADD_DEFINITIONS(-D_MPI)
-ELSE(USE_MPI)
-  ADD_DEFINITIONS(-D_)
-ENDIF(USE_MPI)
+############################################################
+# Look for required libraries: blas,lapack,scifor,dmft_tools
+############################################################
+FIND_PACKAGE(BLAS REQUIRED)
 
+FIND_PACKAGE(LAPACK REQUIRED)
 
+# Find Scifor
 FIND_PACKAGE(PkgConfig)
-#Find Scifor and DMFT_TOOLS, required:
 PKG_SEARCH_MODULE(SCIFOR REQUIRED scifor)
 IF(${SCIFOR_FOUND})
   MESSAGE(STATUS "SCIFOR found at: ${SCIFOR_PREFIX}")
@@ -124,7 +97,7 @@ $ export PKG_CONFIG_PATH=<path_to_scifor_dir>/etc:$PKG_CONFIG_PATH")
 ENDIF()
 INCLUDE_DIRECTORIES(BEFORE ${SCIFOR_INCLUDE_DIRS})
 
-
+# Find Dmft_tools
 PKG_SEARCH_MODULE(DMFT_TOOLS REQUIRED dmft_tools)
 IF(${DMFT_TOOLS_FOUND})
   MESSAGE(STATUS "DMFT_TOOLS found at: ${DMFT_TOOLS_PREFIX}")
@@ -134,6 +107,47 @@ Can not find DMFT_TOOLS in this system. Check DMFT_TOOLS installation. Try addin
 $ export PKG_CONFIG_PATH=<path_to_dmft_tools_dir>/etc:$PKG_CONFIG_PATH")
 ENDIF()
 INCLUDE_DIRECTORIES(BEFORE ${DMFT_TOOLS_INCLUDE_DIRS})
+
+
+############################################################
+# Set Fortran options based on BUILD_TYPE and FC ID
+############################################################
+if(CMAKE_Fortran_COMPILER_ID MATCHES GNU) # this is gfortran
+  SET(CMAKE_Fortran_MODDIR_FLAG   "-J")
+  SET(CMAKE_Fortran_FLAGS         "-cpp -ffree-line-length-none") # -mcmodel=large  this is to remove the 2Gb limit of virtual memory allocation
+  SET(CMAKE_Fortran_FLAGS_TESTING "-O2 -funroll-loops")
+  SET(CMAKE_Fortran_FLAGS_DEBUG   "-O0 -p -g -Wsurprising -Waliasing -fwhole-file -fcheck=all -pedantic -fbacktrace -fbounds-check")
+  SET(CMAKE_Fortran_FLAGS_RELEASE "-O3 -ffast-math -march=native -funroll-loops")  ##-fno-protect-parens -flto
+  
+elseif(CMAKE_Fortran_COMPILER_ID MATCHES Intel)
+  SET(CMAKE_Fortran_MODDIR_FLAG   "-module ") #remember the ending white space here 
+  SET(CMAKE_Fortran_FLAGS         "-fpp")
+  SET(CMAKE_Fortran_FLAGS_TESTING "-O2 -ftz")
+  SET(CMAKE_Fortran_FLAGS_DEBUG   "-p -O0 -g -fpe1 -warn -debug extended -traceback -check all,noarg_temp_created")
+  SET(CMAKE_Fortran_FLAGS_RELEASE "-O3 -ftz")
+
+elseif(CMAKE_Fortran_COMPILER_ID MATCHES G95)
+  SET(CMAKE_Fortran_MODDIR_FLAG   "-fmod=")
+  SET(CMAKE_Fortran_FLAGS         "-cpp")
+  SET(CMAKE_Fortran_FLAGS_TESTING "-O1  -fsloppy-char")
+  SET(CMAKE_Fortran_FLAGS_DEBUG   "-O0 -g -ftrace=full")
+  SET(CMAKE_Fortran_FLAGS_RELEASE "-O3")
+  
+elseif(CMAKE_Fortran_COMPILER_ID MATCHES PGI)
+  SET(CMAKE_Fortran_MODDIR_FLAG   "-module ")
+  SET(CMAKE_Fortran_FLAGS         "-")
+  SET(CMAKE_Fortran_FLAGS         "")
+  SET(CMAKE_Fortran_FLAGS_DEBUG   "-g -O0 -Mframe")
+  SET(CMAKE_Fortran_FLAGS_RELEASE "-O3 -mcmodel=medium -fast -Munroll")
+
+endif()
+
+#set MPI preprocessing defition:
+IF(USE_MPI)
+  ADD_DEFINITIONS(-D_MPI)
+ELSE(USE_MPI)
+  ADD_DEFINITIONS(-D_)
+ENDIF(USE_MPI)
 
 
 
@@ -181,8 +195,9 @@ FILE(GLOB VCA_LOCAL_SRC
 SET(VCA_OBJS ${VCA_LOCAL_SRC})
 
 ADD_EXECUTABLE(vca ${DRIVERS}/${EXE}.f90 ${VCA_OBJS})
-TARGET_LINK_LIBRARIES(vca ${DMFT_TOOLS_LDFLAGS} ${SCIFOR_LDFLAGS})  
+TARGET_LINK_LIBRARIES(vca ${DMFT_TOOLS_LDFLAGS} ${SCIFOR_LDFLAGS} ${LAPACK_LIBRARIES} ${BLAS_LIBRARIES})  
 SET_TARGET_PROPERTIES(vca PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_INSTALL_PREFIX}" OUTPUT_NAME "${EXE}${GIT_BRANCH_}")
+MESSAGE(STATUS "Executable created at: ${Yellow}${CMAKE_INSTALL_PREFIX}/${EXE}${GIT_BRANCH_}${ColourReset}")
 
 ADD_CUSTOM_TARGET(
   completion
