--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -92,15 +92,23 @@ FILE(WRITE  ${REVISION_FILE} "character(len=41),parameter,public :: revision = \
 # Look for required libraries: blas,lapack,scifor,dmft_tools
 ############################################################
 IF(NOT WITH_BLAS_LAPACK)
-  # SET(BLA_VENDOR Intel10_64lp_seq)
-  FIND_PACKAGE(BLAS REQUIRED)
-  MESSAGE(STATUS "${BLAS_LIBRARIES}")
-  FIND_PACKAGE(LAPACK REQUIRED)
-  MESSAGE(STATUS "${LAPACK_LIBRARIES}")
+  FIND_PACKAGE(MKL)
+  IF(${MKL_FOUND})
+      MESSAGE(STATUS "EXPLICIT MKL found at: ${MKL_PREFIX}")
+      MESSAGE(STATUS "${MKL_LIBRARIES}")
+  ELSE()
+      MESSAGE(STATUS "EXPLICIT MKL NOT FOUND: USING SYSTEM BLAS AND LAPACK")
+      FIND_PACKAGE(BLAS REQUIRED)
+      MESSAGE(STATUS "${BLAS_LIBRARIES}")
+      FIND_PACKAGE(LAPACK REQUIRED)
+      MESSAGE(STATUS "${LAPACK_LIBRARIES}")
+  ENDIF()
 ELSE()
   MESSAGE(STATUS "Using  Blas/Lapack as in Scifor")
 ENDIF()
 
+
+FIND_PACKAGE(MKL)
 
 
 # Find Scifor
@@ -217,7 +225,7 @@ FILE(GLOB VCA_LOCAL_SRC
 SET(VCA_OBJS ${VCA_LOCAL_SRC})
 
 ADD_EXECUTABLE(vca ${DRIVERS}/${EXE}.f90 ${VCA_OBJS})
-TARGET_LINK_LIBRARIES(vca ${DMFT_TOOLS_LDFLAGS} ${SCIFOR_LDFLAGS} ${LAPACK_LIBRARIES} ${BLAS_LIBRARIES})  
+TARGET_LINK_LIBRARIES(vca ${DMFT_TOOLS_LDFLAGS} ${SCIFOR_LDFLAGS} ${MKL_LIBRARIES} ${LAPACK_LIBRARIES} ${BLAS_LIBRARIES})  
 SET_TARGET_PROPERTIES(vca PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_INSTALL_PREFIX}" OUTPUT_NAME "${EXE}${GIT_BRANCH_}")
 MESSAGE(STATUS "Executable created at: ${Yellow}${CMAKE_INSTALL_PREFIX}/${EXE}${GIT_BRANCH_}${ColourReset}")
 
