--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -101,11 +101,11 @@ ELSE()
 Can not find SciFortran in this system. Check SciFor installation. Try adding the provided PKG-CONFIG file to the environment:
 $ export PKG_CONFIG_PATH=<path_to_scifor_dir>/etc:$PKG_CONFIG_PATH")
 ENDIF()
-IF("${SCIFOR_LDFLAGS}" MATCHES "blas" OR "lapack")
+IF("${SCIFOR_LDFLAGS}" MATCHES "mkl")
+  FIND_PACKAGE(MKL QUIET)
+ELSEIF("${SCIFOR_LDFLAGS}" MATCHES "blas" OR "lapack")
   FIND_PACKAGE(BLAS REQUIRED)
   FIND_PACKAGE(LAPACK REQUIRED)
-ELSEIF("${SCIFOR_LDFLAGS}" MATCHES "mkl")
-  FIND_PACKAGE(MKL REQUIRED)
 ENDIF()
 INCLUDE_DIRECTORIES(BEFORE ${SCIFOR_INCLUDE_DIRS})
 
